@@ -438,18 +438,8 @@ function phoromatic_schedule_id_to_name($schedule_id)
 }
 function phoromatic_account_id_to_group_name($account_id)
 {
-	static $group_names;
-
-	if(!isset($group_names[$account_id]))
-	{
-		$stmt = phoromatic_server::$db->prepare('SELECT GroupName FROM phoromatic_accounts WHERE AccountID = :account_id');
-		$stmt->bindValue(':account_id', $account_id);
-		$result = $stmt->execute();
-		$row = $result->fetchArray();
-		$group_names[$account_id] = $row['GroupName'];
-	}
-
-	return $group_names[$account_id];
+	// XXX deprecated
+	return phoromatic_server::account_id_to_group_name($account_id);
 }
 
 ?>
