@@ -29,6 +29,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Download latest OpenBenchmarking.org test suites/profiles in background thread from the event server
 - phoromatic: Add option to pre-seed test installs to systems when otherwise idling
 - phoromatic: Support for exporting result files to download as CSV or TXT
+- phoromatic: Add phoromatic.list-results sub-command for clients
 
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
